--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -15,24 +15,60 @@
 			<h2>Book detail</h2>
 
 			<table class="table">
-					<tr>
-						<td>
-							<%= link_to (@book.user) do %>
-							<%= attachment_image_tag(@book.user, :profile_image, size: "100x100", fallback: "no-image-mini.jpg") %><br>
-							<%= @book.user.name %>
-							<% end %>
-						</td>
-						<td><%= link_to @book.title, @book %></td>
-						<td><%= @book.body %></td>
-						<% if @book.user == current_user %>
-							<td><%= link_to "Edit",edit_book_path(@book), class: "btn-sm btn-success edit_book_#{@book.id}" %>
-							</td>
-							<td><%= link_to "Destroy",@book, method: :delete, data: {confirm: "本当に削除してもよろしいですか？"}, class: "btn-sm btn-danger destroy_book_#{@book.id}" %>
-							</td>
+				<tr>
+					<td>
+						<%= link_to (@book.user) do %>
+						<%= attachment_image_tag(@book.user, :profile_image, size: "100x100", fallback: "no-image-mini.jpg") %><br>
+						<%= @book.user.name %>
 						<% end %>
-					</tr>
-				</table>
-
+					</td>
+					<td><%= link_to @book.title, @book %></td>
+					<td><%= @book.body %></td>
+					<td>
+						<% if @book.favorited_by?(current_user) %>
+							<%= link_to book_favorites_path(@book.id), method: :delete do %>
+								<span class="glyphicon glyphicon-thumbs-up" aria-hidden="true" style="color: tomato;"></span>
+							<% end %>
+						<% else %>
+							<%= link_to book_favorites_path(@book.id), method: :post do %>
+								<span class="glyphicon glyphicon-thumbs-up" aria-hidden="true"></span>
+							<% end %>
+						<% end %>
+						<%= @book.favorites.count %>
+					</td>
+					<td>コメント数:<%= @comments.count %></td>
+					<% if @book.user == current_user %>
+						<td><%= link_to "Edit",edit_book_path(@book), class: "btn-sm btn-success edit_book_#{@book.id}" %>
+						</td>
+						<td><%= link_to "Destroy",@book, method: :delete, data: {confirm: "本当に削除してもよろしいですか？"}, class: "btn-sm btn-danger destroy_book_#{@book.id}" %>
+						</td>
+					<% end %>
+				</tr>
+			</table>
+			<table class="table">
+				<% @comments.each do |book_comment| %>
+					<tbody>
+						<td>
+							<%= link_to user_path(book_comment.id) do %>
+                    		<%= attachment_image_tag book_comment.user, :profile_image, size: "40x40", fallback: "no_image.jpg" %>
+                			<% end %>
+                			<%= book_comment.user.name %>
+                		</td>
+                		<td><%= book_comment.comment %></td>
+                		<td>
+			                <% if book_comment.user == current_user %>
+			                	<%= link_to '削除', book_book_comment_path(book_comment.book.id, book_comment.id), method: :delete, data: {confirm: "本当に削除してもよろしいですか？"}, class: "btn btn-danger pull-right" %>
+			                <% end %>
+			            </td>
+					</tbody>
+				<% end %>
+			</table>
+			<div>
+				<%= form_for [@book, @book_comment] do |f| %>
+					<%= f.text_area :comment, class: "form-control",placeholder: "コメント" %>
+					<%= f.submit "送信する", class: "btn btn-lg btn-base-1 mt-20 pull-right" %>
+				<% end %>
+			</div>
 		</div>
 	</div>
 </div>
